<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/payment_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/payment_title"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/payment_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/payment_price_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_title" />

    <TextView
        android:id="@+id/payment_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/payment_price_label"
        app:layout_constraintTop_toBottomOf="@+id/payment_price_label"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/payment_card_number_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/card_number_hint"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_price"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/payment_card_month_field"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/card_month_hint"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/payment_card_cvc_field"
        app:layout_constraintStart_toStartOf="@+id/payment_card_number_field"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/payment_card_year_field"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/card_year_hint"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/payment_card_cvc_field"
        app:layout_constraintStart_toEndOf="@+id/payment_card_month_field"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/payment_card_cvc_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/card_cvc_hint"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/payment_card_number_field"
        app:layout_constraintTop_toBottomOf="@+id/payment_card_number_field"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/payment_card_name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="@string/mask_card_name"
        android:hint="@string/card_name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/payment_card_cvc_field"
        app:layout_constraintStart_toStartOf="@+id/payment_card_month_field"
        app:layout_constraintTop_toBottomOf="@+id/payment_card_cvc_field"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/payment_call_to_action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_rounded_orange"
        android:text="@string/payment_button_label"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/payment_card_name_field"
        app:layout_constraintStart_toStartOf="@+id/payment_card_name_field"
        app:layout_constraintTop_toBottomOf="@+id/payment_card_name_field" />
</androidx.constraintlayout.widget.ConstraintLayout>