<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/summary_payment_background_box"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/background_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/summary_payment_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/compra_realizada_com_sucesso"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/summary_payment_title"
        app:layout_constraintStart_toStartOf="@+id/summary_payment_title"
        app:layout_constraintTop_toBottomOf="@+id/summary_payment_title" />

    <TextView
        android:id="@+id/summary_payment_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/parabens"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/summary_payment_background_box"
        app:layout_constraintEnd_toEndOf="@+id/summary_payment_background_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/summary_payment_background_box"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/summary_payment_line_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confira_o_resumo_da_compra"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_payment_background_box" />

    <ImageView
        android:id="@+id/summary_payment_package_image"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagem_do_pacote"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_payment_line_text"
        tools:src="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/summary_payment_package_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="São Paulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_payment_package_image" />

    <TextView
        android:id="@+id/summary_payment_package_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="8/12 - 10/12 de 2019"
        app:layout_constraintStart_toStartOf="@+id/summary_payment_package_local"
        app:layout_constraintTop_toBottomOf="@+id/summary_payment_package_local" />

    <TextView
        android:id="@+id/summary_payment_package_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="R$ 243,99"
        app:layout_constraintStart_toStartOf="@+id/summary_payment_package_date"
        app:layout_constraintTop_toBottomOf="@+id/summary_payment_package_date" />

</androidx.constraintlayout.widget.ConstraintLayout>